# copybridge-app

./: README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yaml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  config_file.rs  err.rs  main.rs
src-tauri/src/cmd/: add.rs  connect.rs  copy.rs  create.rs  delete.rs  list.rs  mod.rs  paste.rs  remove.rs
src/components/: ClipBoard.jsx  Navbar.jsx
src/components/ui/: password.jsx  textarea.jsx
