[package]
name = "copybridge-app"
version = "0.0.2"
description = "An app to copy/paste from/to multiple clipboards across devices"
authors = ["Abhishek M J", "Siddesh Devarakonda"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.1.0-beta.4"
clap = { version = "4.5.7", features = ["derive"] }
directories = "5.0.1"
toml = "0.8.14"
tauri-plugin-http = "2.0.0-beta.10"
tokio = "1.38.0"
rpassword = "7.3.1"
confy = "0.6.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2.0.0-beta.9"

